--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <div class="intro">
             <br><br>
             <h1>Welcome <br><br>to Alexis Pizzeria!</h1><br>
-            <p>Home to the best and affordable pizzas</p>
+            <p>Home to the best and most affordable pizzas</p>
         </div>
+
     </div>
 
     
