add menu content

--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
                   </li>
                 </ul>
         </div>
-            </nav>
+      </div>
+
+      <div class="card orderInput">
+        <div class="row justify-content">
+          <form id="menu">
+            <h2>MENU</h2>
+              <div class="form-group row align-items-center">
+              <label class="col-sm-3 col-form-label" for="Size">Size</label>
+              <select id="pizzaSize" class="form-control col-sm-9">
+                <option value="300">Small @300/=</option>
+                <option value="500">Medium @500/=</option>
+                <option value="1000">Large @1000/=</option>
+              </select>
+              <br><br>
+              <label class="col-sm-3 col-form-label" for="pizzaCrust">Crust</label>
+                <select id="pizzaCrust" class="form-control col-sm-9">
+                    <option value="300">Crispy crust @100/=</option>
+                    <option value="500">Gluten-free @500/=</option>
+                    <option value="400">Stuffed crust @400/=</option>
+                    <option value="100">Thin crust @100</option>
+                    <option value="700">Cheese Crust @700</option>
+                </select>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
