--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           <form id="menu">
             <h2>MENU</h2>
               <div class="form-group row align-items-center">
+
+                <!--size-->
               <label class="col-sm-3 col-form-label" for="Size">Size</label>
               <select id="pizzaSize" class="form-control col-sm-9">
                 <option value="300">Small @300/=</option>
@@ -41,6 +43,8 @@
                 <option value="1000">Large @1000/=</option>
               </select>
               <br><br>
+
+              <!--crust-->
               <label class="col-sm-3 col-form-label" for="pizzaCrust">Crust</label>
                 <select id="pizzaCrust" class="form-control col-sm-9">
                     <option value="300">Crispy crust @100/=</option>
@@ -49,6 +53,87 @@
                     <option value="100">Thin crust @100</option>
                     <option value="700">Cheese Crust @700</option>
                 </select>
+              <br><br><br><br>
+
+              <!--toppings-->
+              <form id="Toppings" class="form-group" form="pizzaToppings">
+                <legend class="col-form-label col-sm-3">Toppings</legend>
+                <div class="Toppings">
+                  <div class="form-check">
+                    <input class="form-check-input" id="anchovies" type="checkbox" value="80" />
+                                  <label class="form-check-label" for="cheese">Anchovies @Kes.80</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="oysters" type="checkbox" value="200" />
+                                  <label class="form-check-label" for="oysters">Smoked Oysters @Kes.200</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="sardines" type="checkbox" value="100" />
+                                  <label class="form-check-label" for="sardines">Sardines @Kes.100</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="tuna" type="checkbox" value="80" />
+                                  <label class="form-check-label" for="tuna">Tuna @Kes.80</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="mushrooms" type="checkbox" value="70" />
+                                  <label class="form-check-label" for="mushrooms">Mushrooms @Kes.70</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="tomatoes" type="checkbox" value="30" />
+                                  <label class="form-check-label" for="tomatoes">Sun-dried Tomatoes @Kes.30</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="olives" type="checkbox" value="100" />
+                                  <label class="form-check-label" for="olives">Black Olives @Kes.100</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="bacon" type="checkbox" value="80" />
+                                  <label class="form-check-label" for="bacon">Bacon slices @Kes.80</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="beef" type="checkbox" value="50" />
+                                  <label class="form-check-label" for="beef">Ground beef @Kes.50</label>
+                              </div>
+                          </div>
+                          <div class="col-sm-4">
+                              <div class="form-check">
+                                  <input class="form-check-input" id="sausage" type="checkbox" value="50" />
+                                  <label class="form-check-label" for="sausage">Sausage rings @Kes.50</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="ham" type="checkbox" value="80" />
+                                  <label class="form-check-label" for="ham">Ham slices @Kes.80</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="pepperoni" type="checkbox" value="70" />
+                                  <label class="form-check-label" for="pepperoni">Pepperoni rings @Kes.70</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="chicken" type="checkbox" value="50" />
+                                  <label class="form-check-label" for="chicken">Chicken chunks @Kes.50</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="shrimp" type="checkbox" value="100" />
+                                  <label class="form-check-label" for="shrimp">Shrimp @Kes.100</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="basil" type="checkbox" value="50" />
+                                  <label class="form-check-label" for="basil">Basil @Kes.50</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="egg-plant" type="checkbox" value="50" />
+                                  <label class="form-check-label" for="egg-plant">Grilled Egg-plant @Kes.50</label>
+                              </div>
+                              <div class="form-check">
+                                  <input class="form-check-input" id="green-pepper" type="checkbox" value="30" />
+                                  <label class="form-check-label" for="green-pepper">Roasted Green Pepper
+                                      @Kes.30</label>
+                              </div>
+                  </div>
+                </div>
+              </form>
+
               </div>
             </div>
           </form>
