change submit option position

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
         <div id="pizzaCount" class="form-group">
           <label class="col-sm-3" for="pizzaCount"><strong><h4>Number of Pizzas</h4></strong></label>
           <input class="form-control col-sm-20" type="number" min="1">
-          <div class="form-group mr-n3"><br><br>
-
+          <div class="form-group mr-n3"><br>
+            <button class="btn btn-outline-success form-control" type="submit">Order Now!</button>
+            <br>
             <form id="delivery">
               <p><strong>Would you want a delivery for Ksh 350?</strong></p>
               <div class="form-check form-check-inline">
@@ -123,11 +124,9 @@
               <input class="form-control" id="deliveryLocation" type="text" placeholder="Location..." />
             </form>
             <br>
-            <button class="btn btn-outline-success form-control" type="submit">Order Now!</button>
+            <button id="checkoutBtn" class="btn btn-outline-success form-control">Checkout</button>
           </div>
           <br><br>
-
-
       </div>
     </div>
     <br><br>
