--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
                 </ul>
         </div>
       </div>
-
       <div class="card orderInput">
         <div class="row justify-content">
           <form id="menu">
-            <h2>MENU</h2>
+            <h2>menu</h2>
               <div class="form-group row align-items-center">
 
                 <!--size-->
               <label class="col-sm-3 col-form-label" for="Size"><strong>Size</strong></label>
-              <select id="pizzaSize" class="form-control col-sm-9">
+              <select id="Size" class="form-control col-sm-9">
                 <option value="300">Small @300/=</option>
                 <option value="500">Medium @500/=</option>
                 <option value="1000">Large @1000/=</option>
@@ -50,7 +49,7 @@
 
               <!--crust-->
               <label class="col-sm-3 col-form-label" for="pizzaCrust"><strong>Crust</strong></label>
-                <select id="pizzaCrust" class="form-control col-sm-9">
+                <select id="Crust" class="form-control col-sm-9">
                     <option value="300">Crispy crust @100/=</option>
                     <option value="500">Gluten-free @500/=</option>
                     <option value="400">Stuffed crust @400/=</option>
@@ -114,7 +113,7 @@
             <form id="delivery">
               <p><strong>Would you want a delivery for Ksh 350?</strong></p>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" name="delivery" type="radio" id="Yes" value="YES" />
+                <input class="form-check-input" name="delivery" type="radio" id="yes" value="YES" />
                 <label class="form-check-label" for="YES">
                   YES
                 </label>
@@ -137,7 +136,7 @@
 
 
     </div>
+    <script src="js/script.js" type="text/javascript"></script>
     <script src="js/jquery.js" type="text/javascript"></script>
-      <script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
