add form contents

--- a/index.html
+++ b/index.html
@@ -24,29 +24,31 @@
                     <a href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a href="aboutUs.html">About Us</a>
+                    <a href="about-us.html">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="ContactUs.html">Contact Us</a>
+                    <a href="Contact-Us.html">Contact Us</a>
                   </li>
                 </ul>
         </div>
       </div>
       <div class="card orderInput">
-        <div class="row justify-content">
-          <form id="menu">
+        <div class="row justify-content-around">
+          <form id="pizzacreation">
             <h2>menu</h2>
               <div class="form-group row align-items-center">
 
                 <!--size-->
               <label class="col-sm-3 col-form-label" for="Size"><strong>Size</strong></label>
-              <select id="Size" class="form-control col-sm-9">
+              <select id="pizzaSize" class="form-control col-sm-9">
                 <option value="300">Small @300/=</option>
                 <option value="500">Medium @500/=</option>
                 <option value="1000">Large @1000/=</option>
               </select>
               <br><br>
+               </div>
 
+               <div class="form-group row align-items-center">
               <!--crust-->
               <label class="col-sm-3 col-form-label" for="pizzaCrust"><strong>Crust</strong></label>
                 <select id="Crust" class="form-control col-sm-9">
@@ -59,32 +61,32 @@
               <br><br><br><br>
 
               <!--toppings-->
-              <form id="Toppings" class="form-group" form="pizzaToppings">
+              <form id="Toppings" class="form-group" form="pizzaCraft">
                 <legend class="col-form-label col-sm-3"><strong>Toppings</strong></legend>
                 <div class="Toppings">
-                  <div class="form-check">
-                    <input class="form-check-input" id="anchovies" type="checkbox" value="80" />
-                                  <label class="form-check-label" for="cheese">Anchovies @Kes.80</label>
+                  <div class="">
+                    <input class="form-check-input" id="onions" type="checkbox" value="30"/>
+                                  <label class="form-check-label" for="onions">Onions @Ksh.30</label>
                               </div>
                               <div class="form-check">
-                                  <input class="form-check-input" id="oysters" type="checkbox" value="200" />
-                                  <label class="form-check-label" for="oysters">Smoked Oysters @Kes.200</label>
+                                  <input class="form-check-input" id="mushrooms" type="checkbox" value="200" />
+                                  <label class="form-check-label" for="mushrooms">Mushrooms @Ksh.200</label>
                               </div>
                               <div class="form-check">
-                                  <input class="form-check-input" id="sardines" type="checkbox" value="100" />
-                                  <label class="form-check-label" for="sardines">Sardines @Kes.100</label>
+                                  <input class="form-check-input" id="broccoli" type="checkbox" value="100" />
+                                  <label class="form-check-label" for="broccoli">Broccoli @Ksh.100</label>
                               </div>
                               <div class="form-check">
                                   <input class="form-check-input" id="tuna" type="checkbox" value="80" />
-                                  <label class="form-check-label" for="tuna">Tuna @Kes.80</label>
+                                  <label class="form-check-label" for="tuna">Tuna @Ksh.80</label>
                               </div>
                               <div class="form-check">
-                                  <input class="form-check-input" id="mushrooms" type="checkbox" value="70" />
-                                  <label class="form-check-label" for="mushrooms">Mushrooms @Kes.70</label>
+                                  <input class="form-check-input" id="potato" type="checkbox" value="70" />
+                                  <label class="form-check-label" for="potato">Potatoes @Ksh.70</label>
                               </div>
                               <div class="form-check">
-                                  <input class="form-check-input" id="tomatoes" type="checkbox" value="30" />
-                                  <label class="form-check-label" for="tomatoes">Sun-dried Tomatoes @Kes.30</label>
+                                  <input class="form-check-input" id="pepperoni" type="checkbox" value="130" />
+                                  <label class="form-check-label" for="pepperoni">Pepperoni@Ksh.130</label>
                               </div>
                               <div class="form-check">
                                   <input class="form-check-input" id="olives" type="checkbox" value="100" />
@@ -92,11 +94,11 @@
                               </div>
                               <div class="form-check">
                                   <input class="form-check-input" id="bacon" type="checkbox" value="80" />
-                                  <label class="form-check-label" for="bacon">Bacon slices @Kes.80</label>
+                                  <label class="form-check-label" for="bacon">Bacon slices @Ksh.80</label>
                               </div>
                               <div class="form-check">
                                   <input class="form-check-input" id="beef" type="checkbox" value="50" />
-                                  <label class="form-check-label" for="beef">Ground beef @Kes.50</label>
+                                  <label class="form-check-label" for="beef">Ground beef @Ksh.50</label>
                               </div>
                   </div>
                 </div>
