--- a/js/Contact-Us.html
+++ b/js/Contact-Us.html
@@ -15,10 +15,10 @@
                 <a href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a href="aboutUs.html">About Us</a>
+                <a href="about-us.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a href="ContactUs.html">Contact Us</a>
+                <a href="Contact-Us.html">Contact Us</a>
               </li>
             </ul>
         </div>
