--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@
           <div class="form-group mr-n3"><br>
             <button class="btn btn-outline-success form-control" type="submit">Order Now!</button>
             <br>
+          </div>
+
+          <!--Pizza Cart-->
+          <div id="pizzaCart" class="col-md-20">
+            <h4>Basket</h4>
+            <table class="table table-hover">
+                <tr>
+                  <th>Size</th>
+                  <th>Crust</th>
+                  <th>Toppings</th>
+                  <th>Total-charge</th>
+                </tr>
+              <tablebody></tablebody>
+            </table>
             <form id="delivery">
               <p><strong>Would you want a delivery for Ksh 350?</strong></p>
               <div class="form-check form-check-inline">
