--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <title>pizza planet</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/styles.css"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-   
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -126,8 +123,10 @@
                 </tr>
               <tablebody></tablebody>
             </table>
+
+            <!--delivery-->
             <form id="delivery">
-              <p><strong>Would you want a delivery for Ksh 350?</strong></p>
+              <p><strong>Would you want a delivery for Ksh 200?</strong></p>
               <div class="form-check form-check-inline">
                 <input class="form-check-input" name="delivery" type="radio" id="yes" value="YES" />
                 <label class="form-check-label" for="YES">
@@ -149,10 +148,8 @@
       </div>
     </div>
     <br><br>
-
-
     </div>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
