--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="card orderInput">
         <div class="row justify-content-around">
           <form id="pizzacreation">
-            <h2>menu</h2>
+            <h4>make your own pizza!</h4>
               <div class="form-group row align-items-center">
 
                 <!--size-->
@@ -57,8 +57,8 @@
               <br><br><br><br>
 
               <!--toppings-->
-              <form id="Toppings" class="form-group" form="pizzaCraft">
-                <legend class="col-form-label col-sm-3"><strong>Toppings</strong></legend>
+              <fieldset id="pizzaToppings" class="form-group" form="pizzaToppings">
+                <legend class=""><h5><strong>Toppings</strong></h5></legend>
                 <div class="Toppings">
                   <div class="">
                     <input class="form-check-input" id="onions" type="checkbox" value="30"/>
@@ -98,10 +98,11 @@
                               </div>
                   </div>
                 </div>
-              </form>
+              </fieldset>
             </div>
           </form>
         </div><br>
+        <!--pizza count-->
         <div id="pizzaCount" class="form-group">
           <label class="col-sm-3" for="pizzaCount"><strong><h4>Number of Pizzas</h4></strong></label>
           <input class="form-control col-sm-20" type="number" min="1">
@@ -110,7 +111,7 @@
             <br>
           </div>
 
-          <!--Pizza Cart-->
+          <!--basket-->
           <div id="pizzaCart" class="col-md-20">
             <h4>Basket</h4>
             <table class="table table-hover">
@@ -122,6 +123,8 @@
                 </tr>
               <tablebody></tablebody>
             </table>
+          </hr>
+          <p>Total amount is <span id="total-charge">0</span>/=</p>
 
             <!--delivery-->
             <form id="delivery">
@@ -148,8 +151,8 @@
     </div>
     <br><br>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-    <script src="js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.4.1.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
