remove deleted contents

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
               <!--crust-->
               <label class="col-sm-3 col-form-label" for="pizzaCrust"><strong>Crust</strong></label>
                 <select id="crust" class="form-control col-sm-9">
-                    <option value="300">Crispy crust @100/=</option>
-                    <option value="500">Gluten-free @500/=</option>
-                    <option value="400">Stuffed crust @400/=</option>
-                    <option value="100">Thin crust @100</option>
-                    <option value="700">Cheese Crust @700</option>
+                    <option value="crispy-crust">Crispy crust @100/=</option>
+                    <option value="gluten-free">Gluten-free @500</option>
+                    <option value="stuffed-crust">Stuffed crust @400/=</option>
+                    <option value="thin-crust">Thin crust @100</option>
+                    <option value="cheese-crust">Cheese Crust @700</option>
                 </select>
               <br><br><br><br>
 
@@ -111,7 +111,7 @@
           </div>
 
           <div class="col-xs-4" id="order">
-            <h5>Price: Ksh <span id="final-cost"></span></h5><br>
+            <h5>Price: Ksh <span id="final-cost"></span></h5>
             <div id="deliver" class="deliver">
               <p><strong>Would you want a delivery for 200/=?</strong><p>
               <form id="address-form">
