add yes/no option

--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
             <h5>Price: Ksh <span id="final-cost"></span></h5>
             <div id="deliver" class="deliver">
               <p><strong>Would you want a delivery for 200/=?</strong><p>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" name="delivery" type="radio" id="no" value="NO" />NO
+                  <label class="form-check-label" for="no">
+                  </label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" name="delivery" type="radio" id="yes" value="YES" />YES
+                  <label class="form-check-label" for="yes">
+
               <form id="address-form">
                 <div class="col-xs-6">
                   <label for="first-name"></label>
